# 2026-worldcup-predictor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
deploy/: crontab.example  sched-fetch.sh  sched-results.sh  worldcup-fetch.service  worldcup-fetch.timer  worldcup-web.service
docs/: BACKLOG.md
docs/superpowers/plans/: 2026-06-15-phase2a-offpitch-intel.md  (+6 more)
src/worldcup_predictor/: __init__.py  backtest.py  bracket.py  bracket_topology.py  calibrate.py  calibrate_totals.py  cli.py  config.py  db.py  engine.py  evaluate.py  goal_model.py  ingest.py  intel.py  mcp_server.py  models.py  news.py  odds.py  papertrade.py  player_status.py  predict.py  ratings.py  simulate.py  team_signal.py  tune.py  valuebet.py  web_server.py
tests/: test_backtest.py  test_bracket.py  test_bracket_topology.py  test_calibrate.py  test_calibrate_totals.py  test_cli.py  test_compute_elo.py  test_config.py  test_db.py  test_engine_intel.py  test_engine_read.py  test_engine_write.py  test_fetch_results.py  test_goal_model.py  test_history_frame.py  test_ingest_history.py  test_intel.py  test_intel_e2e.py  test_knockout_ingest.py  test_mcp_affects.py  test_mcp_server.py  test_metrics.py  test_model_cache.py  test_models.py  test_news.py  test_odds.py  test_papertrade.py  test_player_status.py  test_predict.py  test_ratings_primitives.py  test_rescale.py  test_score_predictions.py  test_seed.py  test_simulate.py  test_spike_penaltyblog.py  test_spreads.py  test_standings.py  test_team_signal.py  test_tune.py  test_valuebet.py  (+1 more)
tests/fixtures/: mini_history.csv
(+18 files in other folders)
