[project]
name = "worldcup-predictor"
version = "0.1.0"
description = "2026 FIFA World Cup prediction system with MCP + web UI"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "penaltyblog>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "httpx>=0.27",
    "feedparser>=6.0",
    "mcp[cli]>=1.27,<2",
    "fastapi[standard]>=0.115",
    "sse-starlette>=2.1",
    "pydantic>=2.11",
    "typer>=0.16",
    "python-dotenv>=1.0",
]

[project.scripts]
worldcup = "worldcup_predictor.cli:app"
worldcup-mcp = "worldcup_predictor.mcp_server:main"
worldcup-web = "worldcup_predictor.web_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldcup_predictor"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100
[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]
ignore = ["B008"]
[tool.ruff.lint.isort]
known-first-party = ["worldcup_predictor"]
[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "--strict-markers"]
